Fixed the linebreak in the lightboxes

--- a/css/css2020.css
+++ b/css/css2020.css
@@ -339,6 +339,7 @@ a:active {
    font-size: 24px;
    text-align: center;
    background: rgba(17, 14, 33, 1);
+   z-index: -1;
   }
 
   .light_box:hover {
